# ml-workbench

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  Makefile  README-project-archive.md  README-spaces.md  README.md  USER-GUIDE.md  WORKFLOW-RETROSPECTIVE.md  app.py  benchmark_engine.py  bootstrap.py  catalog_engine.py  catalog_viewmodels.py  charts.py  corpora.py  diagnostics.py  explainer.py  model_registry.py  openrouter.py  package-lock.json  pricing.py  pyproject.toml  render.yaml  requirements.txt  review_harness.py  scenario_engine.py  scenario_viewmodels.py  snapshot_tools.py  sources.md  test_app.py  test_benchmark_engine.py  test_charts.py  test_corpora.py  test_model_registry.py  test_openrouter_models.py  test_pricing.py  (+18 more)
.ai/: learning-mode.md
.claude/: settings.json
.gemini/: settings.json
docs/: README.md
scripts/: agent-config.json  capture_review_bundle.py  gen-agents.js  rebuild_flores_snapshot.py  refresh_aa_snapshot.py  update-skills-index.js  validate_snapshots.py
skills/: INDEX.md
tests/: test_app.py  test_charts.py  (+13 more)
workbench/: .coverage  Dockerfile  Makefile  README-spaces.md  README.md  __init__.py  app.py  charts.py  corpora.py  diagnostics.py  explainer.py  model_registry.py  openrouter.py  pricing.py  provenance.py  pyproject.toml  requirements.txt  test_app.py  test_pricing.py  test_token_tax.py  test_token_tax_ui.py  test_tokenizer.py  token_tax.py  token_tax_ui.py  tokenizer.py  tokenizer_registry.py  types.py
workbench/engines/: benchmark.py  catalog.py  scenario.py
workbench/viewmodels/: catalog.py
(+71 files in other folders)
