[project]
name = "reasoning-model-comparison"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "gradio[oauth,mcp]==6.8.0",
    "requests>=2.31",
    "transformers>=4.40",
    "protobuf>=4.25",
    "langdetect>=1.0.9",
    "plotly>=5.18",
    "tiktoken>=0.5",
]

[dependency-groups]
dev = [
    "huggingface-hub[cli]>=0.23",
    "mypy>=1.11",
    "playwright>=1.54",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.12",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "docs",
    "skills",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
pretty = true
exclude = [
    "^docs/",
    "^skills/",
]
